# trade-pro

./: .env.example  .gitignore  Dockerfile  README.md  accumulation_scanner.py  app.py  backtest_high.py  check_hourly_data.py  crypto-sectors-guide.md  daily_predictor.py  docker-compose.yml  docker_entrypoint.py  draw_arc_strategy.py  draw_demo.py  draw_fuzzy_arc.py  guardian.py  main.py  market_monitor_app.py  market_monitor_app.py.bak  mcp_server.py  requirements.txt  run_5000.sh  run_web.py  sector_fetcher.py  sector_heatmap.py  sim_trade.py  snapshot_latest.json  start_ws.sh  test_bollinger.py  test_cos.py  test_cos_sdk.py  test_display_logic.py  test_oi_backtest.py  test_single_hour_signal.py  test_validation_layer.py  validate_deploy.py  加密货币数据指标说明.md
archive/: ARCHITECTURE.md  PROJECT_STRUCTURE.md  SYSTEM_SKILL.md  analyze_signal_trigger.py  backtest_ordi.py  hyper_monitor_app.py  sim_trade_legacy.py  sim_trade_v7.py
configs/: __init__.py  config.py  strategy_params.py
core/: __init__.py  backtest_base.py  backtest_bollinger.py  backtest_runner.py  chart_generator.py  collector.py  data_loader.py  database.py  monthly_collector.py
crypto_engine/: .gitignore  Cargo.toml  pyproject.toml
models/: __init__.py  signal.py
scripts/: cos_client.py  hourly_update.sh  hourly_update_home.sh  monitor_surge.py  record_six_hour.py  test_arc_strategy.py  test_arc_strategy_v2.py
source/: .gitignore  README.md  main.py  requirements.txt  run_all_strategies.sh  run_web.sh  test_websocket.py
strategies/: __init__.py  arc_bottom.py  base.py  bollinger.py  coin_quality.py  (+8 more)
(+76 files in other folders)
